force-app/main/default/objects/Hotel_Commissions__c/Hotel_Commissions__c.object-meta.xml
<CustomObject>
    <description>Hotel Commissions are revenue transactions.These are the commissions which Linux Foundation receives from Hotel&apos;s when event registrant registers for an LF event and books the room to stay in and attend the event.</description>
    <label>Hotel Commissions</label>
    <nameField>
        <label>Hotel Commissions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hotel Commissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>