force-app/main/default/objects/Hotel_Commissions__c/fields/Bill_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hotel Commissions</relationshipLabel>
    <relationshipName>Hotel_Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>