force-app/main/default/objects/Hotel_Commissions__c/fields/Bill_to_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill to Contact 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Hotel Commissions (Bill to Contact 2)</relationshipLabel>
    <relationshipName>Hotel_Commissions1</relationshipName>
    <type>Lookup</type>
</CustomField>