force-app/main/default/objects/Hotel_Commissions__c/fields/Bill_to_Contact_3__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Contact_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill to Contact 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Hotel Commissions (Bill to Contact 3)</relationshipLabel>
    <relationshipName>Hotel_Commissions2</relationshipName>
    <type>Lookup</type>
</CustomField>