force-app/main/default/objects/Hotel_Commissions__c/fields/Bill_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill to Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Hotel Commissions</relationshipLabel>
    <relationshipName>Hotel_Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>