force-app/main/default/objects/Hotel_Commissions__c/fields/Hotel_Commission_Link__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Commission_Link__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_470, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_470))&amp;Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hotel Commission Link</label>
    <type>Text</type>
</CustomField>