force-app/main/default/objects/Hotel_Commissions__c/fields/NS_Deferred_Revenue_Account__c.field-meta.xml
<CustomField>
    <fullName>NS_Deferred_Revenue_Account__c</fullName>
    <label>NS Deferred Revenue Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NetSuite_Deferred_Revenue_Account</valueSetName>
    </valueSet>
</CustomField>