force-app/main/default/objects/Hotel_Commissions__c/fields/NS_Invoice_Memo__c.field-meta.xml
<CustomField>
    <fullName>NS_Invoice_Memo__c</fullName>
    <label>NS Invoice Memo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>