force-app/main/default/objects/Hotel_Commissions__c/fields/Salesorder_Status__c.field-meta.xml
<CustomField>
    <fullName>Salesorder_Status__c</fullName>
    <label>Salesorder Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>