force-app/main/default/objects/Hotel_Commissions__c/fields/SubsidiaryId__c.field-meta.xml
<CustomField>
    <fullName>SubsidiaryId__c</fullName>
    <defaultValue>Text(1)</defaultValue>
    <label>SubsidiaryId</label>
    <length>150</length>
    <type>Text</type>
</CustomField>