force-app/main/default/objects/Hotel_Commissions__c/fields/Sync_to_Netsuite__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_Netsuite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync to Netsuite</label>
    <type>Checkbox</type>
</CustomField>